* update linux-g4 to 5.16.10.arch1-2

--- a/linux-g4/config
+++ b/linux-g4/config
@@ -335,7 +335,7 @@ CONFIG_PPC_OF_BOOT_TRAMPOLINE=y
 # CONFIG_UDBG_RTAS_CONSOLE is not set
 CONFIG_PPC_SMP_MUXED_IPI=y
 CONFIG_MPIC=y
-# CONFIG_MPIC_MSGR is not set
+CONFIG_MPIC_MSGR=y
 CONFIG_PPC_I8259=y
 CONFIG_PPC_RTAS=y
 CONFIG_RTAS_ERROR_LOGGING=y
@@ -412,7 +412,7 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_ARCH_CPU_PROBE_RELEASE=y
 CONFIG_KEXEC=y
 # CONFIG_CRASH_DUMP is not set
-# CONFIG_IRQ_ALL_CPUS is not set
+CONFIG_IRQ_ALL_CPUS=y
 CONFIG_ARCH_FLATMEM_ENABLE=y
 CONFIG_ILLEGAL_POINTER_VALUE=0
 CONFIG_PPC_4K_PAGES=y
@@ -438,7 +438,7 @@ CONFIG_PM=y
 CONFIG_APM_EMULATION=m
 CONFIG_PM_CLK=y
 # CONFIG_WQ_POWER_EFFICIENT_DEFAULT is not set
-CONFIG_ENERGY_MODEL=y
+# CONFIG_ENERGY_MODEL is not set
 CONFIG_PPC_RTAS_FILTER=y
 # end of Kernel options
 
@@ -585,7 +585,7 @@ CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_DEV_THROTTLING_LOW=y
 CONFIG_BLK_WBT=y
 CONFIG_BLK_WBT_MQ=y
-# CONFIG_BLK_CGROUP_IOLATENCY is not set
+CONFIG_BLK_CGROUP_IOLATENCY=y
 CONFIG_BLK_CGROUP_FC_APPID=y
 CONFIG_BLK_CGROUP_IOCOST=y
 CONFIG_BLK_CGROUP_IOPRIO=y
@@ -1768,7 +1768,7 @@ CONFIG_PCCARD_NONSTATIC=y
 CONFIG_AUXILIARY_BUS=y
 # CONFIG_UEVENT_HELPER is not set
 CONFIG_DEVTMPFS=y
-# CONFIG_DEVTMPFS_MOUNT is not set
+CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 
@@ -4088,7 +4088,6 @@ CONFIG_THERMAL_GOV_FAIR_SHARE=y
 CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_BANG_BANG is not set
 # CONFIG_THERMAL_GOV_USER_SPACE is not set
-# CONFIG_THERMAL_GOV_POWER_ALLOCATOR is not set
 CONFIG_CPU_THERMAL=y
 CONFIG_CPU_FREQ_THERMAL=y
 CONFIG_DEVFREQ_THERMAL=y
