* update qt5-base to 5.15.2+kde+r300-1.1

--- a/qt5/qt5-base/PKGBUILD
+++ b/qt5/qt5-base/PKGBUILD
@@ -5,9 +5,10 @@
 pkgbase=qt5-base
 pkgname=(qt5-base qt5-xcb-private-headers)
 pkgver=5.15.2+kde+r300
-pkgrel=1
+pkgrel=1.1
 _commit=eb8da90c4a0972de6e66b59dd9f95be016f1b80e
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(powerpc)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='A cross-platform application and UI framework'
@@ -30,10 +31,12 @@ groups=('qt' 'qt5')
 _pkgfqn=qtbase
 source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit
         qt5-base-cflags.patch
-        qt5-base-nostrip.patch)
+        qt5-base-nostrip.patch
+        big-endian-scroll.patch)
 sha256sums=('SKIP'
             '5411edbe215c24b30448fac69bd0ba7c882f545e8cf05027b2b6e2227abc5e78'
-            '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094')
+            '4b93f6a79039e676a56f9d6990a324a64a36f143916065973ded89adc621e094'
+            '797c1930756e7a63074b7fdb85ad911f1a8e006d55008c5da4c6b39126c24a71')
 
 pkgver() {
   cd $_pkgfqn
@@ -47,6 +50,8 @@ prepare() {
 
   patch -p1 < ../qt5-base-cflags.patch # Use system CFLAGS in qmake
   patch -p1 < ../qt5-base-nostrip.patch # Don't strip binaries with qmake
+
+  patch -p2 < ../big-endian-scroll.patch
 }
 
 build() {
