* update qt5-declarative to 5.15.2+kde+r46-1

--- a/qt5/qt5-declarative/PKGBUILD
+++ b/qt5/qt5-declarative/PKGBUILD
@@ -16,9 +16,11 @@ groups=('qt' 'qt5')
 conflicts=('qtchooser')
 _pkgfqn=qtdeclarative
 source=(git+https://invent.kde.org/qt/qt/$_pkgfqn#commit=$_commit
-        qtdeclarative-5.15.2-riscv-atomic.patch)
+        qtdeclarative-5.15.2-riscv-atomic.patch
+        big-endian-qtquick-software.patch)
 sha256sums=('SKIP'
-            '4e5dbd2c0afa081aa6aa7bc70ab205bbdfd86f91e574183f1a7a98372d31d680')
+            '4e5dbd2c0afa081aa6aa7bc70ab205bbdfd86f91e574183f1a7a98372d31d680'
+            '39cc449ad6b5303773902094d86fad27e814922c4e63c5f7bd175a909ae21728')
 options=(debug)
 
 pkgver() {
@@ -33,6 +35,7 @@ prepare() {
   git revert -n 568763928a78b52373932b01be17e040f7c3fa50 # Revert version bump
 
   patch -Np1 -i ${srcdir}/qtdeclarative-5.15.2-riscv-atomic.patch
+  patch -Np2 -i ${srcdir}/big-endian-qtquick-software.patch
 }
 
 build() {
