--- a/qt5/qt5-declarative/PKGBUILD
+++ b/qt5/qt5-declarative/PKGBUILD
@@ -4,9 +4,10 @@
 
 pkgname=qt5-declarative
 pkgver=5.15.2+kde+r46
-pkgrel=1
+pkgrel=1.1
 _commit=29ee9a0e9f02ec74153a2cf09dc63722bc273544
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(powerpc)
 url='https://www.qt.io'
 license=('GPL3' 'LGPL3' 'FDL' 'custom')
 pkgdesc='Classes for QML and JavaScript languages'
