* update linux-g4 to 5.16.10.arch1-3

--- a/linux-g4/PKGBUILD
+++ b/linux-g4/PKGBUILD
@@ -3,11 +3,11 @@
 
 pkgbase=linux-g4
 pkgver=5.16.10.arch1
-pkgrel=2
+pkgrel=3
 pkgdesc='Linux (G4 optimized)'
 _srctag=v${pkgver%.*}-${pkgver##*.}
 url="https://git.archlinux.org/linux.git/log/?h=$_srctag"
-arch=(powerpc)
+arch=(powerpc powerpc64le)
 license=(GPL2)
 makedepends=(
   bc kmod libelf pahole git
@@ -24,7 +24,7 @@ validpgpkeys=(
   'A2FF3A36AAA56654109064AB19802F8B0D70FC30'  # Jan Alexander Steffens (heftig)
 )
 sha256sums=('SKIP'
-            '31135ef1d676a226469c450b9181ab98c734e240e1ab917f4fba1600cf9e1764')
+            '1442986f864692a9f9cd2e218c318e4845a2ed0fadffd029600a36b497c60236')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
