* update gcc to 11.2.0-2

--- a/gcc/PKGBUILD
+++ b/gcc/PKGBUILD
@@ -13,12 +13,12 @@ esac
 pkgver=11.2.0
 _majorver=${pkgver%%.*}
 _islver=0.24
-pkgrel=1
+pkgrel=2
 pkgdesc='The GNU Compiler Collection'
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=(GPL LGPL FDL custom)
 url='https://gcc.gnu.org'
-makedepends=(binutils libmpc libxcrypt) # doxygen python git libxcrypt)
+makedepends=(binutils libmpc libxcrypt doxygen python git libxcrypt)
 makedepends_powerpc=(gcc-ada)
 makedepends_powerpc64le=(gcc-ada)
 makedepends_x86_64=(gcc-ada)
