* update binutils to 2.38-1

--- a/binutils/PKGBUILD
+++ b/binutils/PKGBUILD
@@ -5,8 +5,8 @@
 # toolchain build order: linux-api-headers->glibc->binutils->gcc->binutils->glibc
 
 pkgname=binutils
-pkgver=2.37
-pkgrel=1.1
+pkgver=2.38
+pkgrel=1
 pkgdesc='A set of programs to assemble and manipulate binary and object files'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.gnu.org/software/binutils/'
@@ -19,11 +19,9 @@ replaces=(binutils-multilib)
 options=(staticlibs !distcc !ccache)
 #_commit=cb5f6a3e146cc70bc2d864989386df80acec5d3e
 #source=(git+https://sourceware.org/git/binutils-gdb.git#commit=$_commit)
-source=(https://ftp.gnu.org/gnu/binutils/binutils-$pkgver.tar.xz{,.sig}
-	0001-bfd-Close-the-file-descriptor-if-there-is-no-archive.patch)
-sha256sums=('820d9724f020a3e69cb337893a0b63c2db161dadcb0e06fc11dc29eb1e84a32c'
-            'SKIP'
-            '7ebb017ccd00bb3806625a42b6fc6c7332f00a562bc5b12e5b1484993640b27a')
+source=(https://ftp.gnu.org/gnu/binutils/binutils-$pkgver.tar.xz{,.sig})
+sha256sums=('e316477a914f567eccc34d5d29785b8b0f5a10208d36bbacedcc39048ecfe024'
+            'SKIP')
 validpgpkeys=(3A24BC1E8FB409FA9F14371813FCEF89DD9E3C4F)
 
 prepare() {
@@ -31,8 +29,6 @@ prepare() {
   mkdir -p binutils-build
 
   cd binutils-gdb
-
-  patch -Np1 -i ${srcdir}/0001-bfd-Close-the-file-descriptor-if-there-is-no-archive.patch
 
   # Turn off development mode (-Werror, gas run-time checks, date in sonames)
   sed -i '/^development=/s/true/false/' bfd/development.sh
