* update linux-api-headers to 5.16.8-1

--- a/linux-api-headers/PKGBUILD
+++ b/linux-api-headers/PKGBUILD
@@ -1,19 +1,21 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
-# Maintainer:  Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
+# Maintainer: Giancarlo Razzolini <grazzolini@archlinux.org>
+# Maintainer: Frederik Schwan <freswa at archlinux dot org>
+# Contributor: Bartłomiej Piotrowski <bpiotrowski@archlinux.org>
 # Contributor: Allan McRae <allan@archlinux.org>
 
-# toolchain build order: linux-api-headers->glibc->binutils->gcc->binutils->glibc
+# toolchain build order: linux-api-headers->glibc->binutils->gcc->glibc->binutils->gcc
 
 pkgname=linux-api-headers
-pkgver=5.13.17
+pkgver=5.16.8
 pkgrel=1
 pkgdesc='Kernel headers sanitized for use in userspace'
 arch=(powerpc64le powerpc riscv64)
 url='https://www.gnu.org/software/libc'
 license=(GPL2)
-#makedepends=(rsync)
+makedepends=(rsync)
 source=(https://www.kernel.org/pub/linux/kernel/v${pkgver:0:1}.x/linux-${pkgver}.tar.{xz,sign})
-sha256sums=('4ae70d23ed53bad6d53a3a159d235b8696595466f221986025f4a0ce111b0a1b'
+sha256sums=('52aa5f05ee8addcc1ec0020f50e5f88ea1a308c2afac4a2305e1e4cf42580316'
             'SKIP')
 validpgpkeys=('ABAF11C65A2970B130ABE3C479BE3E4300411886'   # Linus Torvalds
               '647F28654894E3BD457199BE38DBBDC86092693E')  # Greg Kroah-Hartman
@@ -33,10 +35,6 @@ build() {
 package() {
   cd linux-$pkgver
   ARCH=${ARCH} make INSTALL_HDR_PATH="$pkgdir/usr" headers_install
-
-  # seems nothing properly fixes permissions
-  find "$pkgdir/usr/include" -type d -exec chmod 0755 {} \;
-  find "$pkgdir/usr/include" -type f -exec chmod 0644 {} \;
 
   # use headers from libdrm
   rm -r "$pkgdir/usr/include/drm"
