--- a/libarchive/PKGBUILD
+++ b/libarchive/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Dan McGee <dan@archlinux.org>
 
 pkgname=libarchive
-pkgver=3.5.2
-pkgrel=3
+pkgver=3.6.0
+pkgrel=1
 pkgdesc='Multi-format archive and compression library'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://libarchive.org/'
@@ -13,37 +13,30 @@ depends=('acl' 'libacl.so' 'bzip2' 'expat' 'lz4' 'openssl' 'xz' 'zlib' 'zstd')
 provides=('libarchive.so')
 options=('debug')
 validpgpkeys=('A5A45B12AD92D964B89EEE2DEC560C81CEC2276E') # Martin Matuska <mm@FreeBSD.org>
-source=("https://github.com/${pkgname}/${pkgname}/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.xz"{,.asc}
-        '0001-unescape-when-extracting-link.patch')
-sha256sums=('f0b19ff39c3c9a5898a219497ababbadab99d8178acc980155c7e1271089b5a0'
-            'SKIP'
-            '4872d9b6db95a3d7ecaced31bd3d7dffff3db4f5b2524b45cde157374e0ceb80')
-
-prepare() {
-  cd $pkgname-$pkgver 
-
-  patch -Np1 < ../0001-unescape-when-extracting-link.patch
-}
+source=("https://github.com/${pkgname}/${pkgname}/releases/download/v${pkgver}/${pkgname}-${pkgver}.tar.xz"{,.asc})
+sha256sums=('df283917799cb88659a5b33c0a598f04352d61936abcd8a48fe7b64e74950de7'
+            'SKIP')
 
 build() {
-  cd $pkgname-$pkgver 
+  cd "${pkgname}-${pkgver}"
 
   ./configure \
       --prefix=/usr \
       --without-xml2 \
       --without-nettle \
       --disable-static
-
   make
 }
 
 check() {
-  cd $pkgname-$pkgver
+  cd "${pkgname}-${pkgver}"
+
   make check
 }
 
 package() {
-  cd $pkgname-$pkgver
+  cd "${pkgname}-${pkgver}"
+
   make DESTDIR="$pkgdir" install
   install -Dm0644 COPYING "$pkgdir/usr/share/licenses/libarchive/COPYING"
 }
