--- a/expect/PKGBUILD
+++ b/expect/PKGBUILD
@@ -4,9 +4,9 @@
 
 pkgname=expect
 pkgver=5.45.4
-pkgrel=2
+pkgrel=2.1
 pkgdesc='A tool for automating interactive applications'
-arch=(x86_64 powerpc64le)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.nist.gov/el/msid/expect.cfm'
 license=(custom)
 depends=(tcl)
