--- a/linux/PKGBUILD
+++ b/linux/PKGBUILD
@@ -2,8 +2,8 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgbase=linux
-pkgver=5.16.10.arch1
-pkgrel=2.1
+pkgver=5.16.11.arch1
+pkgrel=1
 pkgdesc='Linux'
 _srctag=v${pkgver%.*}-${pkgver##*.}
 url="https://github.com/archlinux/linux/commits/$_srctag"
@@ -20,6 +20,7 @@ source=(
   "$_srcname::git+https://github.com/archlinux/linux?signed#tag=$_srctag"
   config         # the main kernel config file
   config.ppc32
+  linux-powerpc-binutils-2.38.patch
 )
 validpgpkeys=(
   'ABAF11C65A2970B130ABE3C479BE3E4300411886'  # Linus Torvalds
@@ -29,7 +30,8 @@ validpgpkeys=(
 )
 sha256sums=('SKIP'
             'fae21d700ef717f262a5f117aee09331bc24c92afe5ac5ba08479ba837abee36'
-            '753c4c9a1006529782832390ff0c51ce2a3a4d95292928849e1a68c6d9005cc6')
+            '1733c720aeb64eec4bc37aa8b315bd1833028ff8496268032a3fef5a652f5db7'
+            'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38')
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
 export KBUILD_BUILD_TIMESTAMP="$(date -Ru${SOURCE_DATE_EPOCH:+d @$SOURCE_DATE_EPOCH})"
