--- a/linux-g4/PKGBUILD
+++ b/linux-g4/PKGBUILD
@@ -2,12 +2,12 @@
 # Maintainer: Jan Alexander Steffens (heftig) <jan.steffens@gmail.com>
 
 pkgbase=linux-g4
-pkgver=5.16.10.arch1
-pkgrel=3
+pkgver=5.16.11.arch1
+pkgrel=1
 pkgdesc='Linux (G4 optimized)'
 _srctag=v${pkgver%.*}-${pkgver##*.}
 url="https://git.archlinux.org/linux.git/log/?h=$_srctag"
-arch=(powerpc powerpc64le)
+arch=(powerpc)
 license=(GPL2)
 makedepends=(
   bc kmod libelf pahole git
@@ -17,6 +17,7 @@ _srcname=archlinux-linux
 source=(
   "$_srcname::git+https://github.com/archlinux/linux?signed#tag=$_srctag"
   config         # the main kernel config file
+  linux-powerpc-binutils-2.38.patch
 )
 validpgpkeys=(
   'ABAF11C65A2970B130ABE3C479BE3E4300411886'  # Linus Torvalds
@@ -24,7 +25,8 @@ validpgpkeys=(
   'A2FF3A36AAA56654109064AB19802F8B0D70FC30'  # Jan Alexander Steffens (heftig)
 )
 sha256sums=('SKIP'
-            '1442986f864692a9f9cd2e218c318e4845a2ed0fadffd029600a36b497c60236')
+            '1442986f864692a9f9cd2e218c318e4845a2ed0fadffd029600a36b497c60236'
+            'c30e372bcf445bb40521a1568c69fc9d6d3c08c2d1a8a3e539c9b186b7b5ff38')
 
 export KBUILD_BUILD_HOST=archpower
 export KBUILD_BUILD_USER=$pkgbase
@@ -58,7 +60,7 @@ prepare() {
 
 build() {
   cd $_srcname
-  ARCH=${MYARCH} make all
+  ARCH=${MYARCH} make
 }
 
 _package() {
