* update binutils to 2.38-3.2

--- a/binutils/PKGBUILD
+++ b/binutils/PKGBUILD
@@ -8,13 +8,14 @@
 
 pkgname=binutils
 pkgver=2.38
-pkgrel=3.1
+pkgrel=3.2
 pkgdesc='A set of programs to assemble and manipulate binary and object files'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.gnu.org/software/binutils/'
 license=('GPL3' 'GPL' 'FDL1.3' 'custom:FSFAP')
 groups=(base-devel)
 depends=(glibc zlib libelf)
+makeepends=(autoconf-archive)
 checkdepends=(dejagnu debuginfod bc)
 optdepends=('debuginfod: for debuginfod server/client functionality')
 conflicts=(binutils-multilib)
@@ -57,6 +58,10 @@ prepare() {
 build() {
   cd binutils-build
 
+  case "${CARCH}" in
+    powerpc) _configure_flags=(--enable-64-bit-bfd) ;; 
+  esac
+
   "$srcdir/binutils-gdb/configure" \
     --prefix=/usr \
     --with-lib-path=/usr/lib:/usr/local/lib \
@@ -81,7 +86,7 @@ build() {
     --with-debuginfod \
     --with-pic \
     --with-system-zlib \
-    --enable-64-bit-bfd
+    --enable-obsolete ${_configure_flags[@]}
 
   make -O tooldir=/usr
 
