--- a/python/python-sphinx-furo/PKGBUILD
+++ b/python/python-sphinx-furo/PKGBUILD
@@ -1,26 +1,20 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Filipe Laíns (FFY00) <lains@archlinux.org>
+# Maintainer: Daniel M. Capella <polyzen@archlinux.org>
 
 _pkgname=furo
 pkgname=python-sphinx-$_pkgname
-pkgver=2022.01.02
-pkgrel=2
+pkgver=2022.02.23
+pkgrel=1
 pkgdesc='A clean customizable documentation theme for Sphinx'
 arch=('any')
 url='https://github.com/pradyunsg/furo'
 license=('MIT')
 depends=('python-sphinx' 'python-pygments' 'python-beautifulsoup4')
-makedepends=('python-build' 'python-pip' 'python-sphinx-theme-builder' 'python-flit-core'
-             'nodejs-lts-gallium' 'npm' 'expac')
+makedepends=('python-build' 'python-installer' 'python-sphinx-theme-builder' 'python-flit-core'
+             'nodejs-lts-dubnium')
 source=("$pkgname-$pkgver.tar.gz::$url/archive/$pkgver.tar.gz")
-sha512sums=('dcd2bae18c28a8623b566ef79a996a76d9157a05627b4e9c930b0ea82154992b9d2321ffe1c62fc2d014d499b7ca1f71117bcea9a1e8879a0ef12d3818cdd290')
-
-prepare() {
-  cd $_pkgname-$pkgver
-  # force use of system nodejs
-  local node_ver=$(expac %v nodejs-lts-gallium | cut -d - -f 1)
-  sed -i "s/16.13.0/$node_ver/" pyproject.toml
-}
+sha512sums=('b261b5ad66d26c0447ec16f69a9e895b55b6f0230826692adcf721f0afed6fed688d1c338b738d5afda2accdfd7afe29afff1ce2572d817e01bbad350a0633b0')
 
 build() {
   cd $_pkgname-$pkgver
@@ -45,7 +39,7 @@ build() {
 package() {
   cd $_pkgname-$pkgver
 
-  PIP_CONFIG_FILE=/dev/null pip install --isolated --root="$pkgdir" --ignore-installed --no-deps dist/*.whl
+  python -m installer --destdir="$pkgdir" dist/*.whl
 
   #install -dm 755 "$pkgdir"/usr/share/doc/$pkgname
   #cp -r -a --no-preserve=ownership build/docs/html "$pkgdir"/usr/share/doc/$pkgname
