* update various pip modules

--- a/python/pyqt5/PKGBUILD
+++ b/python/pyqt5/PKGBUILD
@@ -10,7 +10,7 @@ pkgbase=pyqt5
 pkgname=('python-pyqt5')
 pkgdesc="A set of Python bindings for the Qt5 toolkit"
 pkgver=5.15.6
-pkgrel=1
+pkgrel=7
 arch=(x86_64 powerpc64le powerpc)
 url="https://riverbankcomputing.com/software/pyqt/intro"
 license=('GPL')
@@ -38,6 +38,7 @@ makedepends=('sip' 'pyqt-builder' 'python-opengl' 'python-dbus'
 conflicts=('pyqt5-common')
 source=("https://pypi.python.org/packages/source/P/PyQt5/PyQt5-$pkgver.tar.gz")
 sha256sums=('80343bcab95ffba619f2ed2467fd828ffeb0a251ad7225be5fc06dcc333af452')
+options=(debug)
 
 build() {
   cd PyQt5-$pkgver
@@ -59,6 +60,4 @@ package_python-pyqt5(){
   # compile Python bytecode
   python -m compileall -d / "$pkgdir"/usr/lib
   python -O -m compileall -d / "$pkgdir"/usr/lib
-
-  #mv "$pkgdir"/usr/sbin "$pkgdir"/usr/bin
 }
