--- a/python/python-numpy/PKGBUILD
+++ b/python/python-numpy/PKGBUILD
@@ -5,7 +5,7 @@
 # Contributor: Angel 'angvp' Velasquez <angvp[at]archlinux.com.ve> 
 
 pkgname=python-numpy
-pkgver=1.22.0
+pkgver=1.22.2
 pkgrel=1
 pkgdesc="Scientific tools for Python"
 arch=(x86_64 powerpc64le powerpc riscv64)
@@ -16,8 +16,8 @@ optdepends=('openblas: faster linear algebra')
 makedepends=('python-setuptools' 'gcc-fortran' 'cython')
 checkdepends=('python-pytest' 'python-hypothesis')
 options=('staticlibs')
-source=("https://github.com/numpy/numpy/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('dc52d4ef46b2c0ae323f1965cee70cdfb8ffc60c8b95408edeb8f35d118027fcedf69e25d8257522c0fc755aa1387f214950129704fc5b4acfe35ae19dc3a571')
+source=("https://github.com/numpy/numpy/releases/download/v$pkgver/numpy-$pkgver.tar.gz")
+sha512sums=('38b759fa0e6491386cfa34b091fc395a14de18643425187ac44a07f9ad92d4c2a94269c0e1c77ee1fb38c6531878540bbe1135376075cef5dc3cda78cb1c74cf')
 
 build() {
   cd numpy-$pkgver
