--- a/python/python-tempora/PKGBUILD
+++ b/python/python-tempora/PKGBUILD
@@ -4,8 +4,8 @@
 
 pkgname='python-tempora'
 _pkgbase="${pkgname//python-/}"
-pkgver=4.1.2
-pkgrel=3
+pkgver=5.0.1
+pkgrel=1
 pkgdesc="Objects and routines pertaining to date and time (tempora)."
 arch=('any')
 url="https://github.com/jaraco/tempora"
@@ -18,7 +18,7 @@ checkdepends=('python-pytest' 'python-pytest-flake8' 'python-pytest-cov'
               'python-pytest-mypy')
 source=("${pkgname}-${pkgver}.tar.gz::${url}/archive/v${pkgver}.tar.gz"
         'LICENSE')
-sha512sums=('9f7a6bb3f2b22c9e8616b815f385f0c986612bef43de0e65a00a89ddc1080e4c35b9128e0fc32c3c7dbf507a62041bba40c8e51673613299037cfdf63ee451a3'
+sha512sums=('5071091aaf7607d6fc7026b62bae2e418e006611a36a32a1e944cc40862df5e3f2c8fbc74015704cbe631110970238f8e27f346280a2e6e7a81e5b67eda1679b'
             '1106afed483b7258e4ae89c5d9459c3834412b31aac90169725ed62d2ab44f61f6f79e894d4c9e4d8bd99e14530ab778df2187784f0b25eaab86d312fad68944')
 
 # setuptools won't find version from git tag
@@ -26,7 +26,7 @@ export SETUPTOOLS_SCM_PRETEND_VERSION="${pkgver}"
 
 build() {
     cd "${srcdir}/${_pkgbase}-${pkgver}"
-    python ./setup.py build
+    python -c 'from setuptools import setup; setup()' build
 }
 
 check() {
@@ -36,7 +36,7 @@ check() {
 
 package() {
     cd "${srcdir}/${_pkgbase}-${pkgver}"
-    python ./setup.py install --root="${pkgdir}" --optimize=1
+    python -c 'from setuptools import setup; setup()' install --root="${pkgdir}" --optimize=1
 
     # the author has promised to include a LICENSE file in future releases:
     # https://github.com/jaraco/skeleton/issues/1
