--- a/python/python-breathe/PKGBUILD
+++ b/python/python-breathe/PKGBUILD
@@ -4,18 +4,18 @@
 # Contributor: Simon Boulay <simon.boulay@alkeona.net>
 
 pkgname=python-breathe
-pkgver=4.31.0
-pkgrel=3
+pkgver=4.33.1
+pkgrel=1
 pkgdesc="An extension to reStructuredText and Sphinx to be able to read and render Doxygen xml output"
 arch=('any')
 url="https://breathe.readthedocs.org/en/latest/"
 license=('BSD')
-depends=('python' 'python-sphinx' 'python-docutils' 'python-six')
-makedepends=('git' 'python-setuptools')
+depends=('python' 'python-sphinx' 'python-docutils')
+makedepends=('python-setuptools')
 checkdepends=('python-pytest')
 source=("https://github.com/michaeljones/breathe/archive/v${pkgver}/${pkgname}-${pkgver}.tar.gz"
         "${pkgname}-${pkgver}.tar.gz.sig"::"https://github.com/michaeljones/breathe/releases/download/v${pkgver}/breathe-${pkgver}.tar.gz.sig")
-sha512sums=('f6fd7db50ca68cad64d150fcb76227deb282c08109c38b343749f8ce9ee607ccddf767e3020328a61a7570e7a0c1159607148b773bc0b695e87d6b17a6068eac'
+sha512sums=('770c0fd8eaca798c84cbbf138b0b4b1a348e2010cedf5efec085fff348e8b0e548ccbe160ecb112709929ee0cf8fd0d977c5032ae03f74cd39f4bb2ae1d5f14b'
             'SKIP')
 validpgpkeys=('8AED58021FEACDD5F27BA0E6A72F627716EA9D96') # Melvin Vermeeren <vermeeren@vermwa.re>
 
