--- a/python/python-prettytable/PKGBUILD
+++ b/python/python-prettytable/PKGBUILD
@@ -5,8 +5,8 @@
 
 _pkgname=prettytable
 pkgname=python-prettytable
-pkgver=1.0.0
-pkgrel=3
+pkgver=2.2.0
+pkgrel=1
 pkgdesc="A simple Python library for easily displaying tabular data"
 url="https://github.com/jazzband/prettytable"
 arch=('any')
@@ -14,18 +14,11 @@ license=('BSD')
 depends=('python-wcwidth')
 makedepends=('python-setuptools-scm')
 checkdepends=('python-pytest')
-source=("https://files.pythonhosted.org/packages/source/p/prettyTable/prettytable-${pkgver}.tar.gz"
-        '0001-Fix-column-spacing-with-xterm-reset-escape-sequence.patch')
-sha512sums=('2b19d46e375fcc6f6f518d335e5d1e14eac854d0545000581496a13df03292a888ed05e7c9952afccc06706fc5258f7beb27c60291b336d586cebe432b784713'
-            '86cf8be475f62b0dfaa2483a37293cefd61e97bfe3c1226076cacc199da69bc5ea7e561bc311dd1b65f808f4fab202a0d38f702568ab7fbc091f285d2e52c924')
+conflicts=('python-ptable')
+source=("https://files.pythonhosted.org/packages/source/p/prettyTable/prettytable-${pkgver}.tar.gz")
+sha512sums=('df8ae2a1103a4965a351ba16a95ef9659107075bb023090bd9bffd69805ce647dcb26f49164f07f5af0c0b03503373c0353935b32a0fb18edf969dc984aecda7')
 
 export SETUPTOOLSA_SCM_PRETEND_VERSION=$pkgver
-
-prepare() {
-  pushd prettytable-$pkgver
-  patch -p1 -i "$srcdir"/0001-Fix-column-spacing-with-xterm-reset-escape-sequence.patch
-  popd
-}
 
 build() {
   cd prettytable-$pkgver
@@ -34,11 +27,11 @@ build() {
 
 check() {
   cd prettytable-$pkgver
-  pytest
+  python setup.py egg_info
+  PYTHONPATH="$PWD/src" pytest
 }
 
 package() {
   cd prettytable-$pkgver
-  chmod 644 -R prettytable.egg-info
   python setup.py install --root="$pkgdir/"
 }
