--- a/python/python-pycryptodome/PKGBUILD
+++ b/python/python-pycryptodome/PKGBUILD
@@ -1,17 +1,18 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
+# Maintainer: Caleb Maclennan <caleb@alerque.com>
 # Contributor: Josip Ponjavic <josipponjavic at gmail dot com>
 
 pkgbase=python-pycryptodome
 pkgname=('python-pycryptodome' 'python2-pycryptodome')
-pkgver=3.12.0
+pkgver=3.14.1
 pkgrel=1
 license=('BSD')
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://www.pycryptodome.org/'
 makedepends=('gmp' 'python-setuptools' 'python2-setuptools')
 source=("pycryptodome-${pkgver}.tar.gz::https://github.com/Legrandin/pycryptodome/archive/v${pkgver}.tar.gz")
-sha512sums=('67f2a814d74305614fdf9dfb633c4fd9d80d2064119d0ecab24ae52fd8ce4b6de1a1e82c6ba7bcf22fb7db1a5a850adf078e22317b4c07229cd7cb8cb7f1ffd4')
+sha512sums=('08e904aa2f3df19fcc75a8283fc867349617afe3919532912801d8abc9610f1cb64b878b56202cbdf0759cf5506ec5f793123093e21f18ba99acbf42fa4d9cf1')
 
 prepare() {
   cp -a "pycryptodome-$pkgver"{,-python2}
