--- a/python/python-pypandoc/PKGBUILD
+++ b/python/python-pypandoc/PKGBUILD
@@ -3,8 +3,8 @@
 # Maintainer: Caleb Maclennan <caleb@alerque.com>
 
 pkgname=python-pypandoc
-pkgver=1.6.4
-pkgrel=3
+pkgver=1.7.2
+pkgrel=1
 pkgdesc="Thin wrapper for pandoc"
 arch=('any')
 license=('MIT')
@@ -13,11 +13,11 @@ depends=('pandoc')
 makedepends=('python-setuptools')
 checkdepends=('texlive-core' 'texlive-latexextra')
 source=("https://github.com/bebraw/pypandoc/archive/v$pkgver/$pkgname-$pkgver.tar.gz")
-sha512sums=('f01a999040f48b858452d7de29fd0c44f7c247ff088fddfcd84ea47826327ce4572119e23a26bd929b6ff282d67974e23a61cdb5e4956ffd35af36cb991c199a')
+sha512sums=('e2c5de6d56781484c306214a8757b18f7aa23e64489041ae3876ef8b2c0bf8771cc48246ecc97bf8ae67762364e35d9af5212ca6549f7b81ee16d75b1a85557e')
 
 prepare() {
   # We don't really need pip and wheel at runtime
-  sed -i "s/install_requires = .*/install_requires = ['setuptools'],/" pypandoc-$pkgver/setup.py
+  sed -i "/install_requires = /d" pypandoc-$pkgver/setup.py
 }
 
 build() {
