--- a/python/python-requests/PKGBUILD
+++ b/python/python-requests/PKGBUILD
@@ -2,26 +2,24 @@
 # Maintainer: Felix Yan <felixonmars@archlinux.org>
 # Contributor: Massimiliano Torromeo <massimiliano.torromeo@gmail.com>
 
-pkgbase=python-requests
-pkgname=('python-requests')
-pkgver=2.26.0
-pkgrel=5
+pkgname=python-requests
+pkgver=2.27.1
+pkgrel=1
 pkgdesc="Python HTTP for Humans"
 arch=('any')
 url="http://python-requests.org"
 license=('Apache')
 depends=('python-urllib3' 'python-chardet' 'python-idna')
-makedepends=('python-setuptools' 'python-chardet'
-             'python-urllib3' 'python-idna')
+makedepends=('python-setuptools' 'python-chardet' 'python-urllib3' 'python-idna')
 checkdepends=('python-pytest-httpbin' 'python-pytest-mock' 'python-pysocks' 'python-trustme')
 optdepends=('python-pysocks: SOCKS proxy support')
-source=("$pkgbase-$pkgver.tar.gz::https://github.com/psf/requests/archive/v$pkgver.tar.gz"
+source=("https://github.com/psf/requests/archive/v$pkgver/$pkgname-$pkgver.tar.gz"
         certs.patch)
-sha512sums=('df7b3fbef42e600434764b2ae3906546a778f8caab0111d818adef7c747d4d58e9977ac9ae25092e1170a2cde78234e64b779ba4afd84bb2bf7dbce6efb380e9'
+sha512sums=('191f8e0d566d541ab4e0c17bc9a637eb79e841605f6bbb9a0e559bd7bf0f00a71be99e21fa5b5431b9d49cb4a64debd0d7083658f98b723cf976833bb685cb9a'
             '424a3bb01b23409284f6c9cd2bc22d92df31b85cfd96e1d1b16b5d68adeca670dfed4fff7977d8b10980102b0f780eacc465431021fcd661f3a17168a02a39a3')
 
 prepare() {
-  cd "$srcdir"/requests-$pkgver
+  cd requests-$pkgver
   # Stay with chardet for now: https://github.com/psf/requests/issues/5871
   sed -e '/certifi/d' \
       -e "s/,<.*'/'/" \
@@ -31,7 +29,7 @@ prepare() {
 }
 
 build() {
-  cd "$srcdir"/requests-$pkgver
+  cd requests-$pkgver
   python setup.py build
 }
 
@@ -45,6 +43,6 @@ check() {
 }
 
 package() {
-  cd "$srcdir"/requests-$pkgver
+  cd requests-$pkgver
   python setup.py install --skip-build -O1 --root="$pkgdir"
 }
