--- a/python/python-websocket-client/PKGBUILD
+++ b/python/python-websocket-client/PKGBUILD
@@ -6,37 +6,31 @@
 # Contributor: Daniel YC Lin <dlin.tw at gmail>
 # Contributor: Florian Bruhin <archlinux.org@the-compiler.org>
 
-_pkgbase='websocket-client'
-pkgname=python-$_pkgbase
-pkgver=0.59.0
-pkgrel=3
+pkgname=python-websocket-client
+pkgver=1.2.3
+pkgrel=2
 pkgdesc="WebSocket client library for Python"
 arch=('any')
-url="https://github.com/$_pkgbase/$_pkgbase"
+url="https://github.com/websocket-client/websocket-client"
 license=('LGPL')
-depends=('python-six')
+depends=('python')
 makedepends=('python-setuptools')
-checkdepends=('python-pysocks')
-source=("https://pypi.io/packages/source/w/$_pkgbase/$_pkgbase-$pkgver.tar.gz")
-sha512sums=('c7f4a0336093de86fd00828049a836477a3c859cc4bddebd9e7d31eb746dab4de8fa11205a5fb182e5df3590964aa73f279310575dfabc4abc32157e80df42b1')
-
-prepare() {
-  # Not sure why the conditions are not working :/
-  sed -i "s/'backports.ssl_match_hostname'//" $_pkgbase-$pkgver/setup.py
-}
+checkdepends=('python-pytest')
+source=("https://pypi.io/packages/source/w/websocket-client/websocket-client-$pkgver.tar.gz")
+sha512sums=('5e5e00d43b7b4da5e2cb0d00d1e743e420791856e51e2b3d28d78219edcd7a2eace834ae4d7ee2faf89ab27c2b65f063e508f0e470a47ff9d88c36748b3dd113')
 
 build() {
-  cd $_pkgbase-$pkgver
+  cd websocket-client-$pkgver
   python setup.py build
 }
 
 check() {
-  cd $_pkgbase-$pkgver
-  python setup.py test
+  cd websocket-client-$pkgver
+  pytest
 }
 
 package() {
-  cd $_pkgbase-$pkgver
+  cd websocket-client-$pkgver
   python setup.py install --root="$pkgdir" --optimize=1
   install -Dm644 LICENSE -t "$pkgdir"/usr/share/licenses/$pkgname/
 }
