--- a/python/python-wrapt/PKGBUILD
+++ b/python/python-wrapt/PKGBUILD
@@ -3,32 +3,25 @@
 # Contributor: Troy C < rstrox -ta yahoo -tod com >
 
 pkgname=python-wrapt
-pkgver=1.12.1
-pkgrel=6
+pkgver=1.13.3
+pkgrel=1
 pkgdesc="A Python module for decorators, wrappers and monkey patching"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://pypi.python.org/pypi/wrapt"
 license=("BSD")
 depends=('python')
-makedepends=('python')
+makedepends=('python-setuptools')
 checkdepends=('python-pytest')
-source=("$pkgname-$pkgver.tar.gz::https://github.com/GrahamDumpleton/wrapt/archive/$pkgver.tar.gz"
-        py39.patch)
-sha512sums=('33e964cb3aa2437bc7d084a98f622f7c5c8c719d97806796ae0317d35130bdb2679a9dd87be7077e2cae1eb32b65d152349fa7cc138cb392d5999cbfdcecc9ac'
-            '372323f80578bc1fe2fdf8d3a5dc67b79956180048f8036be429b3e2fed4c9f3ce3d29a2c9e8b6128a2ab64cf7d21dc1e7026e8df14a062a94bd8518aca5b50a')
-
-prepare() {
-  cd "$srcdir"/wrapt-$pkgver
-  patch -Np1 -i ../py39.patch # https://github.com/GrahamDumpleton/wrapt/issues/160
-}
+source=("https://github.com/GrahamDumpleton/wrapt/archive/$pkgver/$pkgname-$pkgver.tar.gz")
+sha512sums=('c6cc83baacf2688aa49ec0fe44db612edc61e50982a667de177df0d3a972e9bd5f38f4d5166eefc6075a5cfae194298835beca93ee98eefb50eec5aad7f36a1c')
 
 build() {
-  cd "$srcdir"/wrapt-$pkgver
+  cd wrapt-$pkgver
   python setup.py build
 }
 
 check() {
-  cd "$srcdir"/wrapt-$pkgver
+  cd wrapt-$pkgver
   PYTHONPATH="$PWD/build/lib.linux-$CARCH-3.10:$PYTHONPATH" py.test
 }
 
