--- a/ocaml/ocaml/PKGBUILD
+++ b/ocaml/ocaml/PKGBUILD
@@ -4,7 +4,7 @@
 pkgbase='ocaml'
 pkgname=('ocaml' 'ocaml-compiler-libs')
 pkgver=4.13.1
-pkgrel=1
+pkgrel=3
 pkgdesc="A functional language with OO extensions"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('LGPL2.1' 'custom: QPL-1.0')
@@ -19,6 +19,8 @@ options=('!makeflags' '!emptydirs' 'staticlibs')
 
 build() {
   cd "${srcdir}/${pkgname}-${pkgver}"
+  CFLAGS+=' -ffat-lto-objects'
+  CXXFLAGS+=' -ffat-lto-objects'
   ./configure --prefix /usr --mandir /usr/share/man --disable-force-safe-string
   make --debug=v world.opt
 }
