--- a/clang/PKGBUILD
+++ b/clang/PKGBUILD
@@ -3,8 +3,8 @@
 # Contributor: Jan "heftig" Steffens <jan.steffens@gmail.com>
 
 pkgname=clang
-pkgver=13.0.0
-pkgrel=4.1
+pkgver=13.0.1
+pkgrel=2
 pkgdesc="C language family frontend for LLVM"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://clang.llvm.org/"
@@ -25,14 +25,16 @@ source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
         $_source_base/clang-tools-extra-$pkgver.src.tar.xz{,.sig}
         $_source_base/llvm-$pkgver.src.tar.xz{,.sig}
         fix-scan-build-py-executable-lookup-path.patch
+        strip-exception-specifications-in-CFI-type-names.patch
         enable-SSP-and-PIE-by-default.patch)
-sha256sums=('5d611cbb06cfb6626be46eb2f23d003b2b80f40182898daa54b1c4e8b5b9e17e'
+sha256sums=('787a9e2d99f5c8720aa1773e4be009461cd30d3bd40fdd24591e473467c917c9'
             'SKIP'
-            '428b6060a28b22adf0cdf5d827abbc2ba81809f4661ede3d02b1d3fedaa3ead5'
+            'cc2bc8598848513fa2257a270083e986fd61048347eccf1d801926ea709392d0'
             'SKIP'
-            '408d11708643ea826f519ff79761fcdfc12d641a2510229eec459e72f8163020'
+            'ec6b80d82c384acad2dc192903a6cf2cdbaffb889b84bfb98da9d71e630fc834'
             'SKIP'
             '578b960121c42b8db80566dcb51558409d04455b618cdd608e41b35ded36c13e'
+            '3f4a2784a4c2b2df13e03beb0b66d5805c520f2b9f16ff76e0557daeb284c8fa'
             '67706047fc93a2e79185d344bdac48219ce042c55ddb9b9397bc98db2153ba58')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
@@ -66,6 +68,7 @@ prepare() {
   patch -Np2 -i ../enable-SSP-and-PIE-by-default.patch
 
   patch -Np2 -i ../fix-scan-build-py-executable-lookup-path.patch
+  patch -Np2 -i ../strip-exception-specifications-in-CFI-type-names.patch
 
   # Attempt to convert script to Python 3
   2to3 -wn --no-diffs \
@@ -79,6 +82,7 @@ build() {
     -G Ninja
     -DCMAKE_BUILD_TYPE=Release
     -DCMAKE_INSTALL_PREFIX=/usr
+    -DCMAKE_SKIP_RPATH=ON
     -DLLVM_LINK_LLVM_DYLIB=ON
     -DCLANG_LINK_CLANG_DYLIB=ON
     -DLLVM_ENABLE_RTTI=ON
@@ -113,7 +117,7 @@ check() {
   esac
 
   cd "$srcdir/$pkgname-$pkgver.src/build"
-  ninja check-clang{,-tools}
+  LD_LIBRARY_PATH=$PWD/lib ninja check-clang{,-tools}
 }
 
 _python_optimize() {
