--- a/compiler-rt/PKGBUILD
+++ b/compiler-rt/PKGBUILD
@@ -6,7 +6,7 @@ pkgname=compiler-rt
 pkgver=13.0.1
 pkgrel=1
 pkgdesc="Compiler runtime libraries for clang"
-arch=(x86_64 powerpc64le riscv64)
+arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://compiler-rt.llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 depends=('gcc-libs')
@@ -15,14 +15,18 @@ makedepends=('llvm' 'cmake' 'ninja' 'python')
 makedepends_x86_64=('lib32-gcc-libs')
 options=('staticlibs')
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
-source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig})
+source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig}
+        ppc32-compiler-rt.patch)
 sha256sums=('7b33955031f9a9c5d63077dedb0f99d77e4e7c996266952c1cec55626dca5dfc'
-            'SKIP')
+            'SKIP'
+            '5a8a938fd46e5fad419938ec8cd686e6e3d7d8a4ba15b3ad225790dec4608e5f')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
 
 prepare() {
   cd "$srcdir/$pkgname-$pkgver.src"
+  patch -Np2 -i ${srcdir}/ppc32-compiler-rt.patch
+
   mkdir build
 }
 
