--- a/clang/PKGBUILD
+++ b/clang/PKGBUILD
@@ -9,10 +9,7 @@ pkgdesc="C language family frontend for LLVM"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://clang.llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
-depends=('llvm-libs' 'gcc')
-depends_powerpc64le=('compiler-rt')
-depends_riscv64=('compiler-rt')
-depends_x86_64=('compiler-rt')
+depends=('llvm-libs' 'gcc' 'compiler-rt')
 makedepends=('llvm' 'cmake' 'ninja' 'python-sphinx')
 optdepends=('openmp: OpenMP support in clang with -fopenmp'
             'python: for scan-view and git-clang-format'
