--- a/lldb/PKGBUILD
+++ b/lldb/PKGBUILD
@@ -3,10 +3,10 @@
 # Contributor: Jan "heftig" Steffens <jan.steffens@gmail.com>
 
 pkgname=lldb
-pkgver=13.0.0
+pkgver=13.0.1
 pkgrel=1
 pkgdesc="Next generation, high-performance debugger"
-arch=(x86_64 powerpc64le) # powerpc)
+arch=(x86_64 powerpc64le)
 url="https://lldb.llvm.org/"
 license=('custom:Apache 2.0 with LLVM Exception')
 depends=('llvm-libs' 'clang' 'python' 'python-six')
@@ -14,7 +14,7 @@ makedepends=('llvm' 'cmake' 'ninja' 'swig' 'python-sphinx')
 makedepends_powerpc=('clang' 'lld')
 _source_base=https://github.com/llvm/llvm-project/releases/download/llvmorg-$pkgver
 source=($_source_base/$pkgname-$pkgver.src.tar.xz{,.sig})
-sha256sums=('24c65bd5ec0d7cbc37bafdd7533b1783352708bf6338c403a72f47884e406dbd'
+sha256sums=('4a0c590bccbb3ce8fcbc1997aaed89a0ddbfd8be4b7f393230a867b2de62db16'
             'SKIP')
 validpgpkeys+=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D') # Hans Wennborg <hans@chromium.org>
 validpgpkeys+=('474E22316ABF4785A88C6E8EA2C794A986419D8A') # Tom Stellard <tstellar@redhat.com>
@@ -26,7 +26,6 @@ prepare() {
 
 build() {
   cd "$srcdir/$pkgname-$pkgver.src/build"
-
   PLATFORM_NINJA_TARGETS=all
   case "${CARCH}" in
     powerpc)
@@ -37,7 +36,7 @@ build() {
       PLATFORM_CMAKE_FLAGS="-DLLVM_ENABLE_SPHINX=OFF"
     ;;
     *)
-      PLATFORM_CMAKE_FLAGS="-DLLVM_ENABLE_SPHINX=OFF"
+      PLATFORM_CMAKE_FLAGS="-DLLVM_ENABLE_SPHINX=ON"
       PLATFORM_NINJA_TARGETS+=" docs-lldb-man"
     ;;
   esac
@@ -45,6 +44,7 @@ build() {
   cmake .. -G Ninja \
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_SKIP_RPATH=ON \
     -DLLVM_LINK_LLVM_DYLIB=ON \
     -DCLANG_LINK_CLANG_DYLIB=ON \
     -DLLDB_USE_SYSTEM_SIX=1 ${PLATFORM_CMAKE_FLAGS}
