--- a/glslang/PKGBUILD
+++ b/glslang/PKGBUILD
@@ -3,8 +3,8 @@
 
 # Careful when upgrading this package! It usually breaks ABI without bumping soname.
 pkgname=glslang
-pkgver=11.7.1
-pkgrel=3.1
+pkgver=11.8.0
+pkgrel=1
 pkgdesc='OpenGL and OpenGL ES shader front end and validator'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://github.com/KhronosGroup/glslang'
@@ -14,10 +14,9 @@ makedepends=('cmake' 'ninja' 'git' 'python')
 options=('staticlibs')
 # Get the commits from known_good.json for every release
 source=(${pkgname}-${pkgver}.tar.gz::https://github.com/KhronosGroup/glslang/archive/${pkgver}.tar.gz
-        git+https://github.com/KhronosGroup/SPIRV-Tools#commit=1fbed83c8aab8517d821fcb4164c08567951938f
-        git+https://github.com/KhronosGroup/SPIRV-Headers#commit=449bc986ba6f4c5e10e32828783f9daef2a77644
-        ${pkgname}-pr2800.patch::https://patch-diff.githubusercontent.com/raw/KhronosGroup/glslang/pull/2800.patch)
-sha256sums=('ab2e2ddc507bb418b9227cbe6f443eb06e89e2387944f42026d82c0b4ef79b0a'
+        git+https://github.com/KhronosGroup/SPIRV-Tools#commit=73735db943d7165d725883a1da0ad9eac79c1e34
+        git+https://github.com/KhronosGroup/SPIRV-Headers#commit=b42ba6d92faf6b4938e6f22ddd186dbdacc98d78)
+sha256sums=('9e5fbe5b844d203da5e61bcd84eda76326e0ff5dc696cb862147bbe01d2febb0'
             'SKIP'
             'SKIP')
 
@@ -28,10 +27,6 @@ prepare() {
   # libraries.
   cp -r SPIRV-Tools ${pkgname}-${pkgver}/External/spirv-tools
   cp -r SPIRV-Headers ${pkgname}-${pkgver}/External/spirv-tools/external/spirv-headers
-
-  cd ${pkgname}-${pkgver}
-  # address QTBUG-93101
-  patch -Np1 -i ${srcdir}/${pkgname}-pr2800.patch
 }
 
 build() {
@@ -72,7 +67,3 @@ package() {
 }
 
 # vim: ts=2 sw=2 et:
-sha256sums=('ab2e2ddc507bb418b9227cbe6f443eb06e89e2387944f42026d82c0b4ef79b0a'
-            'SKIP'
-            'SKIP'
-            'cf8dbb4b086a41b54eb8b18a3ad769a1144e9b142907a5139165ea5778b91c86')
